force-app/main/default/objects/PharmaInvoice__c/PharmaInvoice__c.object-meta.xml
<CustomObject>
    <label>PharmaInvoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>InvoiceId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PharmaInvoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>