force-app/main/default/objects/PharmaInvoice__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <formula>IF( Amount__c &gt;1000,Amount__c-(10/100*Amount__c),Amount__c-(5/100*Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>